--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -240,8 +240,7 @@ header.sticky{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
-  gap: 4rem;
-  padding: 30px 12% 70px;
+  gap: 4 rem;
 }
 .about-img img{
   width: 80%;
@@ -249,8 +248,10 @@ header.sticky{
   border-radius: 20%;
 }
 
-.about-text{
-  padding: 40px 0;
+.about-text h2{
+  font-size: var(--h2-font);
+  line-height: 1.3;
+  margin-bottom: 2rem;
 }
 .about-text p{
   color: var(--second-color);
