--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -48,7 +48,7 @@ header{
 }
 
 .logo img{
-  width: 75px;
+  width: 65px;
   vertical-align: middle;
   margin-right: 8px;
   color: var(--main-color);
@@ -276,19 +276,20 @@ header.sticky{
 }
 .menu-content{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
-  gap: 2rem;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
   align-items: center;
   margin-top: 4rem;
+  align-items: center;
 }
 .row{
   position: relative;
   background: var(--other-color);
-  border-radius: 3rem;
+  border-radius: 2rem;
   overflow: hidden;
-  height: 28rem;
-  width: 20rem;
-  
+  height: 20rem;
+  width: 15rem;
+  transition: all 0.5s ease;
 }
 .img-box {
   overflow: hidden;
@@ -296,25 +297,26 @@ header.sticky{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 60%;
+  height: 50%;
 }
 .img-box img {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  transition: all 0.5s ease;
 }
 .text-box{
   width: 100%;
-  padding: 10px 35px 40px;
+  padding: 14px 15px 20px;
 }
 .text-box h3{
-  font-size: 18px;
+  font-size: 17px;
   margin-bottom: 5px;
   font-weight: 700;
 }
 .text-box p{
   color: var(--second-color);
-  line-height: 30px;
+  line-height: 20px;
   margin-bottom: 1.1rem;
 }
 .in-text{
@@ -323,16 +325,16 @@ header.sticky{
   justify-content: space-between;
 }
 .in-text .price h6{
-  font-size: 17px;
+  font-size: 14px;
   color: var(--main-color);
   font-weight: 600;
 }
 .in-text .s-btn a{
   display: inline-block;
-  padding: 9px 23px;
+  padding: 5px 13px;
   background: var(--bg-color);
   color: var(--main-color);
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 500;
   letter-spacing: 1px;
   border-radius: 3rem;
@@ -341,12 +343,12 @@ header.sticky{
 .in-text .s-btn a:hover{
 background: var(--main-color);
 color: var(--bg-color);
-box-shadow: var(--main-color) 0px 1px 25px;
+box-shadow: var(--main-color) 0px 1px 20px;
 }
 .top-icon{
   position: absolute;
-  top: 30px;
-  left: 35px;
+  top: 27px;
+  left: 30px;
 }
 .top-icon i{
   font-size: 25px;
@@ -358,4 +360,53 @@ box-shadow: var(--main-color) 0px 1px 25px;
   height: 28px;
   text-align: center;
   vertical-align: center;
+}
+.img-box img:hover{
+  transform: scale(1.1);
+}
+
+
+.review-content{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+  gap: 2rem;
+  margin-top: 4rem;
+}
+.box{
+  padding: 20px;
+  background: var(--other-color);
+  border-radius: 2rem;
+}
+
+.box p{
+  color: var(--second-color);
+  font-size: 15px;
+  line-height: 25px;
+  margin-bottom: 1.5rem;
+
+}
+.in-box{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.box-img img{
+  width: 65px;
+  border-radius: 50%;
+}
+.box-text h4{
+  margin: 5px 0;
+  font-size: 16px;
+}
+.box-text h5{
+  color: var(--second-color);
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+}
+.ratings i{
+  color: var(--main-color);
+  font-size: 17px;
+  margin-right: 5px;
 }
