--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -25,12 +25,12 @@ body{
   background: var(--bg-color);
   color: var(--text-color);
   width: 100%;
-  min-width: 440px;
 }
 
 header{
   position: fixed;
   width: 100%;
+  /* top: -20px; */
   top: 0;
   right: 0;
   z-index: 1000;
@@ -54,11 +54,12 @@ header{
   color: var(--main-color);
 }
 
-.navlist {
+.navlist{
   display: flex;
-  word-wrap: break-word;
-  white-space: nowrap;
+  /* word-wrap: break-word;
+  white-space: nowrap; */
 }
+
 .navlist a{
   color: var(--text-color);
   font-size: var(--p-font);
@@ -72,35 +73,6 @@ header{
 .navlist a.active{
   color: var(--main-color);
 }
-
-.icons{
-  display: flex;
-  align-items: center;
-}
-.light-dark {
-  display: flex;
-  margin-left: auto; /* Align to the right */
-  margin-right: 10px;
-}
-
-.dark-mode, .light-mode{
-  border: 2px solid transparent;
-  transition: all 0.5s ease;
-}
-.dark-mode i{
-  font-size: 35px;
-  color: var(--text-color);
-  padding: 10px;
-  border-radius: 50%;
-  border: solid var(--main-color);
-  display: none;
-}
-.light-mode i{
-  font-size: 35px;
-  color: var(--text-color);
-  padding: 10px;
-
-}
 .nav-icons{
   display: flex;
   align-items: center;
@@ -111,7 +83,7 @@ header{
 }
 .nav-icons i{ 
   vertical-align: middle;
-  font-size: 28px;
+  font-size: 25px;
   color: var(--bg-color);
   margin-right: 8px;
   margin-left: 5px;
@@ -160,7 +132,8 @@ section{
   margin-top: 50px;
 }
 .home-img img{
-  width: 400px;
+  width: 80%;
+  height: auto;
   border-radius: 50%;
   padding: 10px;
   border: solid var(--main-color) 7px;
@@ -304,7 +277,7 @@ header.sticky{
 .menu-content{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 2rem;
+  gap: 1rem;
   align-items: center;
   margin-top: 4rem;
   align-items: center;
@@ -316,9 +289,6 @@ header.sticky{
   overflow: hidden;
   height: 20rem;
   width: 15rem;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto 0 auto;
   transition: all 0.5s ease;
 }
 .img-box {
@@ -337,7 +307,7 @@ header.sticky{
 }
 .text-box{
   width: 100%;
-  padding: 18px 15px 20px;
+  padding: 14px 15px 20px;
 }
 .text-box h3{
   font-size: 17px;
@@ -353,7 +323,6 @@ header.sticky{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 6px;
 }
 .in-text .price h6{
   font-size: 14px;
@@ -362,7 +331,7 @@ header.sticky{
 }
 .in-text .s-btn a{
   display: inline-block;
-  padding: 7px 15px;
+  padding: 5px 13px;
   background: var(--bg-color);
   color: var(--main-color);
   font-size: 13px;
@@ -407,10 +376,6 @@ box-shadow: var(--main-color) 0px 1px 20px;
   padding: 20px;
   background: var(--other-color);
   border-radius: 2rem;
-}
-
-.review-content .box-text{
-  margin-top: 10px;
 }
 
 .box p{
@@ -468,6 +433,8 @@ box-shadow: var(--main-color) 0px 1px 20px;
   visibility: visible;
 }
 
+
+
 footer{
   background-color: var(--other-color);
   margin-top: 200px;
@@ -484,7 +451,6 @@ footer{
   text-align: center;
   margin-bottom: 4rem;
 }
-
 .social i{
   display: inline-block;
   font-size: 32px;
@@ -531,359 +497,4 @@ footer{
 }
 .copyright-symbol{
   font-size: 20px;
-}
-
-@media (max-width: 1335px){
-  header{
-    padding: 24px 4%;
-  }
-  header.sticky{
-    padding: 8px 4%;
-  }
-  section{
-    padding: 50px 4% 40px;
-  }
-  .container{
-    padding: 30px 4% 50px;
-  }
-  .home{
-    padding-left: 100px;
-  }
-  
-}
-
-@media (max-width: 1150px){
-  .menu-content{
-    grid-template-columns: repeat(3, 1fr);
-  }
-  .row{
-    height: 24rem;
-    width: 18rem;
-    transition: all 0.5s ease;
-  }
-  .text-box{
-    padding: 20px 26px 26px;
-  }
-  .text-box h3{
-    font-size: 22px;
-  }
-  .text-box p{
-    line-height: 25px;
-  }
-  .in-text{
-    padding-top: 12px;
-  }
-  .in-text .price h6{
-    font-size: 17px;
-  }
-  .in-text .s-btn a{
-    display: inline-block;
-    padding: 9px 19px;
-    font-size: 14px;
-  }
-  .top-icon{
-    position: absolute;
-    top: 27px;
-    left: 30px;
-  }
-  .top-icon i{
-    font-size: 27px;
-    border-radius: 20%;
-    width: 30px;
-    height: 30px;
-  }
-}
-
-@media (max-width: 1100px){
-  :root{
-  --big-font: 3.7rem;
-  --h2-font: 2rem;
-  --p-font: 15px;
-  }
-  .home{
-    position: relative;
-    height: 80vh;
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    gap: 2rem;
-    margin-top: 50px;
-  }
-  .home-text h1{
-    font-size: 43px;
-    font-weight: 700;
-    line-height: 4rem;
-    margin-bottom: 2.6rem;
-  }
-  .home-img img{
-    width: 350px;
-    margin-left: auto;
-  }
-  #menu-icon{
-    display: initial;;
-  }
-  .navlist{
-    position: absolute;
-    top: -1000px;
-    left: 0;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    background: var(--other-color);
-    transition: all 0.5s ease;
-  }
-
-  .icons{
-    justify-content: flex-end;
-  }
-  
-  .navlist a{
-    display: block;
-    padding: 0.5rem;
-    margin: 1rem;
-    border-left: 2px solid var(--main-color);
-  }
-  .navlist.open{
-    top: 100%;
-  }
-}
-@media (max-width: 1015px){
-  .menu-content{
-    grid-template-columns: repeat(3, 1fr);
-  }
-  .row{
-    height: 20rem;
-    width: 15rem;
-  }
-  .text-box{
-    padding: 13px 20px 20px;
-  }
-  .text-box h3{
-    font-size: 18px;
-  }
-  .text-box p{
-    line-height: 25px;
-    font-size: 14px;
-  }
-  .in-text{
-    padding-top: 7px;
-  }
-  .in-text .price h6{
-    font-size: 14px;
-  }
-  .in-text .s-btn a{
-    display: inline-block;
-    padding: 6px 16px;
-    font-size: 14px;
-  }
-  .top-icon{
-    position: absolute;
-    top: 27px;
-    left: 30px;
-  }
-  .top-icon i{
-    font-size: 27px;
-    border-radius: 20%;
-    width: 30px;
-    height: 30px;
-  }
-}
-@media (max-width: 990px){
-  :root{
-    --big-font: 3.2rem;
-    --h2-font: 2rem;
-    --p-font: 1.1rem;
-    }
-    .home-text h1{
-      font-size: 39px;
-      font-weight: 700;
-      line-height: 3.8rem;
-      margin-bottom: 2.6rem;
-    }
-}
-@media (max-width: 970px){
-.home-img img{
-  width: 320px;
-  border: solid var(--main-color) 6px;
-}
-}
-
-@media (max-width: 856px){
-  :root{
-  --big-font: 2.7rem;
-  --h2-font: 1.8rem;
-  --p-font: 1.1rem;
-  }
-  .home{
-    grid-template-columns: 1fr;
-    height: 118vh;
-    margin-top: 65px;
-    margin-bottom: 100px;
-    align-items: center;
-    padding: 0;
-    margin: 100px 0 60px 0px;
-  }
-  .home-text h1{
-    font-size: 35px;
-  }
-  .home-text{
-    text-align: center;
-  }
-  .home-img{
-    text-align: center;
-    margin: 0;
-    padding: 0;
-  }
-  .home-img img{
-    width: 350px;
-  }
-    .menu-content {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 2rem;
-      align-items: center;
-      justify-content: center; /* Align items horizontally to the center */
-      margin-top: 4rem;
-      align-items: center;
-    }
-    
-  .row{
-    height: 28rem;
-    width: 21rem;
-    transition: all 0.5s ease;
-  }
-  .text-box{
-    padding: 20px 26px 26px;
-  }
-  .text-box h3{
-    font-size: 25px;
-  }
-  .text-box p{
-    line-height: 30px;
-    font-size: 20px;
-  }
-  .in-text{
-    padding-top: 18px;
-  }
-  .in-text .price h6{
-    font-size: 20px;
-  }
-  .in-text .s-btn a{
-    display: inline-block;
-    padding: 12px 23px;
-    font-size: 16px;
-  }
-  .top-icon{
-    position: absolute;
-    top: 27px;
-    left: 30px;
-  }
-  .top-icon i{
-    font-size: 27px;
-    border-radius: 20%;
-    width: 30px;
-    height: 30px;
-  }
-  .about{
-    grid-template-columns: 1fr;
-  }
-  .about-img{
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .about-img img{
-    width: 350px;
-  }
-  .about-text{
-    text-align: center;
-  }
-}
-@media (max-width: 750px){
-  menu-content{
-    grid-template-columns: repeat(3, 1fr);
-  }
-  .row{
-    height: 24rem;
-    width: 18rem;
-    transition: all 0.5s ease;
-  }
-  .text-box{
-    padding: 20px 26px 26px;
-  }
-  .text-box h3{
-    font-size: 22px;
-  }
-  .text-box p{
-    line-height: 25px;
-  }
-  .in-text{
-    padding-top: 12px;
-  }
-  .in-text .price h6{
-    font-size: 17px;
-  }
-  .in-text .s-btn a{
-    display: inline-block;
-    padding: 9px 19px;
-    font-size: 16px;
-  }
-  .top-icon{
-    position: absolute;
-    top: 27px;
-    left: 30px;
-  }
-  .top-icon i{
-    font-size: 27px;
-    border-radius: 20%;
-    width: 30px;
-    height: 30px;
-  }
-  .row{
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto 0 auto;
-  }
-  footer{
-    margin-top: 100px;
-    padding: 20px 20px 0 0px;
-  }
-  
-}
-@media (max-width: 635px){
-  .menu-content {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  
-.row{
-  height: 29rem;
-  width: 22rem;
-  transition: all 0.5s ease;
-}
-.text-box{
-  padding: 20px 26px 26px;
-}
-.text-box h3{
-  font-size: 25px;
-}
-.text-box p{
-  line-height: 30px;
-  font-size: 20px;
-}
-.in-text{
-  padding-top: 18px;
-}
-.in-text .price h6{
-  font-size: 20px;
-}
-.in-text .s-btn a{
-  padding: 12px 23px;
-  font-size: 17px;
-}
-}
-@media (max-width: 635px){
-  .social i{
-    font-size: 28px;
-  }
 }
