--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -77,30 +77,13 @@ header{
   display: flex;
   align-items: center;
 }
-.light-dark {
-  display: flex;
-  margin-left: auto; /* Align to the right */
-  margin-right: 10px;
-}
 
-.dark-mode, .light-mode{
-  border: 2px solid transparent;
-  transition: all 0.5s ease;
-}
-.dark-mode i{
+.light-mode i {
   font-size: 35px;
   color: var(--text-color);
   padding: 10px;
-  border-radius: 50%;
-  border: solid var(--main-color);
-  display: none;
 }
-.light-mode i{
-  font-size: 35px;
-  color: var(--text-color);
-  padding: 10px;
 
-}
 .nav-icons{
   display: flex;
   align-items: center;
@@ -108,6 +91,9 @@ header{
   background: var(--main-color);
   border-radius: 3rem;
   box-shadow: var(--main-color) 0px 1px 25px; 
+  position: relative;
+  height: 54px;
+  gap: 7px;
 }
 .nav-icons i{ 
   vertical-align: middle;
@@ -116,6 +102,23 @@ header{
   margin-right: 8px;
   margin-left: 5px;
   transition: all 0.5s ease;
+}
+header .nav-icons span{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 11px;
+  left: 90px;
+  border-radius: 25%;
+  background-color:red;
+  height: 14px;
+  padding: 0 5px 0 5px;
+}
+#cart-count{
+  font-size: 12px;
+  color: white;
+  
 }
 #menu-icon{
   font-size: 32px;
@@ -129,8 +132,8 @@ header{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
+  width: 54px;
+  height: 54px;
   background: var(--main-color);
   border-radius: 3rem;
   box-shadow: var(--main-color) 0px 1px 25px; 
@@ -149,6 +152,131 @@ header{
 section{
   padding: 70px 12% 60px;
 }
+
+.cart {
+  position: fixed;
+  top: 0;
+  left: -600px;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 10px;
+  width: 500px;
+  height: 100vh;
+  z-index: 10000;
+  transition: all 0.5s ease;
+}
+
+.cart h2 {
+  color: var(--main-color);
+  margin: auto;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+#cart-items {
+  list-style: none;
+  padding: 0;
+}
+
+#cart-items li {
+  border-bottom: 1px solid #ccc;
+  padding: 10px 0;
+}
+
+#cart-items li:last-child {
+  border-bottom: none;
+}
+
+#cart-items li span {
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.cart-item {
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 10px;
+  gap: 10px;
+  height: 100px;
+}
+.item-image{
+  overflow: hidden;
+  width: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  border-radius: 5%;
+}
+.btnDiv{
+  display: flex;
+  height: 80px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.remove-btn {
+  width: 100px; /* Increase width to accommodate text */
+  background: rgb(252, 83, 83);
+  color: black;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  border: none;
+  border-radius: 10px;
+  height: 50px;
+  display: flex; /* Add display flex to center text vertically */
+  padding: 0 20px; /* Add padding for better spacing */
+  font-size: 16px; /* Adjust font size if needed */
+}
+.order-btn{
+  width: 100px; /* Increase width to accommodate text */
+  background: rgb(95, 236, 95);
+  color: black;
+  text-align: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  border: none;
+  border-radius: 10px;
+  height: 50px;
+  display: flex; /* Add display flex to center text vertically */
+  padding: 0 20px; /* Add padding for better spacing */
+  font-size: 16px;
+}
+
+.item-info{
+  width: 100px;
+  height: 80px;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.item-image img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease;
+}
+
+.cart-item-info {
+  flex-grow: 1;
+}
+
+.cart-item-info h4, .cart-item-info p {
+  margin: 0;
+  width: 200px; /* Set width */
+}
+
+.cart-item-remove {
+  cursor: pointer;
+  width: 90%; /* Set width */
+}
+
 .home{
   position: relative;
   height: 100vh;
@@ -727,6 +855,8 @@ footer{
   }
   .home-text h1{
     font-size: 35px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   .home-text{
     text-align: center;
